--- a/src/index.scss
+++ b/src/index.scss
@@ -59,42 +59,6 @@ header {
   }
 }
 
-.overlay {
-  position: fixed;
-  left: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.2);
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.drawer {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  width: 420px;
-  height: 100%;
-  right: 0;
-  background: #ffffff;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-
-  .items {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
-  }
-
-  h2 {
-    margin: 0;
-  }
-
-  .drawerItem {
-    overflow: auto;
-  }
-}
-
 .cartTotalBlock {
   ul {
     display: block;
@@ -118,6 +82,12 @@ header {
 
   .greenButton {
     position: relative;
+
+    &:disabled {
+      animation: button-loading 0.6s ease-in-out infinite;
+      background-color: #bebebe;
+      cursor: default;
+    }
 
     &:hover {
       img {
@@ -209,5 +179,17 @@ header {
       margin-right: 15px;
       transition: transform 0.15s ease-in-out;
     }
+  }
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
